# knowledge-weaver

./: .gitignore  README.md  _patch_kw.py  pyproject.toml
knowledge_weaver/: cli.py  indexer.py  ingest.py  service.py  ui.py
knowledge_weaver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_core.py  test_imports.py  test_service.py
